--- a/src/components/Looper.css
+++ b/src/components/Looper.css
@@ -10,6 +10,7 @@ body {
 h1,
 h2,
 p {
-    font-size: 28px;
+    font-size: 24px;
     font-family: "Akaya Telivigala";
+    text-align: center;
 }
