--- a/src/components/PlayPause/PlayPause.css
+++ b/src/components/PlayPause/PlayPause.css
@@ -1,5 +1,5 @@
 /*
-wobble-hor-bottom - Play \ Pause buttuns jumpping
+wobble-hor-bottom - Play \ Pause buttuns jumpping ....
 */
 
 .wobble-hor-bottom {
